--- a/liens-morts-detector-jlg/assets/css/blc-admin-styles.css
+++ b/liens-morts-detector-jlg/assets/css/blc-admin-styles.css
@@ -1418,7 +1418,13 @@
     font-weight: 600;
     font-size: 14px;
     cursor: pointer;
-    outline: none;
+}
+
+.blc-scan-status__log-summary:focus,
+.blc-scan-status__log-summary:focus-visible {
+    outline: 2px solid var(--wp-admin-theme-color, #2271b1);
+    outline-offset: 2px;
+    border-radius: 4px;
 }
 
 .blc-scan-status__log summary::-webkit-details-marker {
